{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 236,
  "lineage": "2c949ef6-ad96-f507-ccce-e673f3b2c0de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-EC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:242451082977:instance/i-03d24ddd5d085e59e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d24ddd5d085e59e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00f9994becae59208",
            "private_dns": "ip-10-0-1-224.ec2.internal",
            "private_ip": "10.0.1.224",
            "public_dns": "ec2-54-157-243-143.compute-1.amazonaws.com",
            "public_ip": "54.157.243.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4fac54dfe5ed141",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e37465ce89bcac2",
            "tags": {
              "Name": "MY-VPC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fc75f35a47a4c4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh",
            "aws_subnet.myvpc-public-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myvpc-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:internet-gateway/igw-0051acee129805365",
            "id": "igw-0051acee129805365",
            "owner_id": "242451082977",
            "tags": {
              "Name": "MY-VPC"
            },
            "vpc_id": "vpc-0afe80f2b5e101dd7"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:route-table/rtb-0315522c965614ae7",
            "id": "rtb-0315522c965614ae7",
            "owner_id": "242451082977",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0051acee129805365",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myvpc-public-subnet"
            },
            "vpc_id": "vpc-0afe80f2b5e101dd7"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc-igw",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc-public-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0650bb41639684f3c",
            "route_table_id": "rtb-0315522c965614ae7",
            "subnet_id": "subnet-07e37465ce89bcac2"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc-igw",
            "aws_route_table.myvpc-public",
            "aws_subnet.myvpc-public-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:security-group/sg-08fc75f35a47a4c4d",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fc75f35a47a4c4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "242451082977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afe80f2b5e101dd7"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:subnet/subnet-0f01d20d75aef71f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f01d20d75aef71f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242451082977",
            "tags": {
              "Name": "myvpc-private-subnet"
            },
            "tags_all": {
              "Name": "myvpc-private-subnet"
            },
            "vpc_id": "vpc-0afe80f2b5e101dd7"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:subnet/subnet-07e37465ce89bcac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07e37465ce89bcac2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "242451082977",
            "tags": {
              "Name": "myvpc-public-subnet"
            },
            "tags_all": {
              "Name": "myvpc-public-subnet"
            },
            "vpc_id": "vpc-0afe80f2b5e101dd7"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MY-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:vpc/vpc-0afe80f2b5e101dd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090b0b2c901cf29a4",
            "default_route_table_id": "rtb-0c1a1cda779211b64",
            "default_security_group_id": "sg-0a44e4de0f2c67f99",
            "dhcp_options_id": "dopt-06fb7bb364025fa87",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0afe80f2b5e101dd7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1a1cda779211b64",
            "owner_id": "242451082977",
            "tags": {
              "Name": "MY-VPC"
            },
            "tags_all": {
              "Name": "MY-VPC"
            }
          }
        }
      ]
    }
  ]
}